--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "gulp build"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +19,7 @@
     "gulp-autoprefixer": "^2.0.0",
     "gulp-jade": "^0.10.0",
     "gulp-less": "^2.0.1",
+    "highlight.js": "^8.4.0",
     "less": "^2.1.1",
     "marked": "^0.3.2"
   }
